Update register css

--- a/stories/css/register.sass
+++ b/stories/css/register.sass
@@ -99,6 +99,8 @@ input
     &:focus
       background-color: #fff
       border-bottom: 2px solid #690
+      &::-webkit-input-placeholder
+        opacity: 0
     &:placeholder
       color: #ccc
 
