--- a/stories/css/register.sass
+++ b/stories/css/register.sass
@@ -33,7 +33,7 @@ h2
   width: 100%
   min-height: 100%
   padding: 20px
-  background: #fff
+  background: #f6f6f6
 
 #formContent
   border-radius: 10px 10px 10px 10px
