--- a/stories/css/timeline.sass
+++ b/stories/css/timeline.sass
@@ -1,6 +1,3 @@
-html, body
-  color: #eee
-  
 
 .gotop
   background: #555
@@ -38,8 +35,10 @@ a
 
 .date
   font-size: 1.3rem
-  padding: 1.5rem
+  padding: 0.5rem
   width: 5rem
+  margin-left: 2rem
+  margin-right: 2rem
 
 .title
   font-size: 0.9rem
