--- a/stories/css/news.sass
+++ b/stories/css/news.sass
@@ -1,29 +1,36 @@
+.container
+  border: 1px solid #eee
+  box-shadow: 3px 6px #eee
+  border-radius: 3px
 
-.wrapper
-  backgournd: #333
-
-#newsTitle
-  backgournd: #666666
-  color: #505050
+.title
+  background-color: #999
+  color: #fff
   padding: 0.5rem
-  border: 1px solid #666666 
+  margin-bottom: 1rem
   text-align: left
   width: 100%
   border-radius: 3px
 
-#newsSubTitle
+.news
   display: flex
-  margin-top: 0.8rem 
-  backgournd: #eef7f3
-  color: #999
+  > *:first-child
+    flex: 0 6rem
+    padding: 0.5rem
+    margin: 0 1rem 0 1rem
+    text-align: right
+  > *:nth-child(2)
+    flex: 1
+    min-width: 0
+    padding: 0.5rem
 
-#newContet
-  color: #595757
-
-button
-  border-radius: 3px
-  margin: 1rem
-  font-size: 0.8rem
-  padding: 0.3rem
-  background-color: #619d92
+.action
+  text-align: center
+  button
+    color: #fff
+    border-radius: 3px
+    margin: 1rem
+    font-size: 0.6rem
+    padding: 0.4rem
+    background-color: #619d92
 
