--- a/stories/css/resume.sass
+++ b/stories/css/resume.sass
@@ -4,4 +4,44 @@
   height: 90vh
   > *:first-child
     flex: 0 0 50%
-    border-right: 1px solid #ccc
+
+.cv-title
+  font-size: 16px
+  color: #fff
+  border-radius: 5px
+  border: 1px solid #ccc
+  padding-left: 1rem
+  width: 20%
+  background: #999
+
+.cv-title-right
+  font-size: 16px
+  color: #fff
+  border-radius: 5px
+  border: 1px solid #ccc
+  padding-left: 1rem
+  width: 30%
+  background: #999
+
+.info
+  display: flex
+  > *:first-child
+    padding: 0.3rem
+    font-weight: bold
+  > *:nth-child(2)
+    padding: 0.3rem
+
+.timeline-year
+  display: flex
+
+.timeline-shape
+  border: 1px solid #999
+  border-radius: 50%
+  height: 6.5rem
+  width: 6.5rem
+  padding: 0.5rem
+  text-align: center
+  margin: 10px
+
+.work-item
+  padding: 0 2rem
