--- a/stories/css/fidrstyle.sass
+++ b/stories/css/fidrstyle.sass
@@ -2,4 +2,4 @@
   background-image: linear-gradient(90deg, #1575B7, #2ABF84)
 
 .fidr-navbar .navbar-brand
-  display: inline-flex;
+  display: inline-flex
