Update resume contents

--- a/stories/css/resume.sass
+++ b/stories/css/resume.sass
@@ -1,6 +1,6 @@
 .layout
   display: flex
-  margin-top: 2rem
+  margin-top: 1rem
   > *:first-child
     flex: 0 0 50%
 
@@ -12,6 +12,7 @@
   padding-left: 1rem
   width: 20%
   background: #999
+  margin: 0.2rem 0 0.2rem 0
 
 .cv-title-right
   font-size: 16px
@@ -21,6 +22,7 @@
   padding-left: 1rem
   width: 30%
   background: #999
+  margin: 0.2rem 0 0.2rem 0
 
 .info
   display: flex
@@ -44,3 +46,6 @@
 
 .work-item
   padding: 0 2rem
+
+.work-description
+  margin-left: 2rem
