Update prototypes css

--- a/stories/css/prototypes.sass
+++ b/stories/css/prototypes.sass
@@ -1,14 +1,16 @@
 .prototypes
-  margin: 2rem 0.5rem 0.5rem 1.5rem
+  margin: 1rem 0.5rem 0.5rem 1rem
+  color: #000
 
   .thumbnail-container
     display: flex
 
   .thumbnail-img
-    margin-right: 2rem
+    padding-right: 0.5rem
 
   .thumbnail-title
     text-align: center
+    padding-bottom: 0.3rem
     &:hover
       color: #1276CE
       text-decoration-line: underline
