--- a/stories/css/documents.sass
+++ b/stories/css/documents.sass
@@ -3,4 +3,28 @@
   .docs-layout
   display: flex
 
+  img
+    margin: 0 1.5rem 0 1.5rem
+
+  .img2
+    margin: 0 1.5rem 0 1.5rem
+
+.docs-titles
+  margin-top: 1.5rem
+  font-size: 16px
+  color: #fff
+  border-radius: 5px
+  border: 1px solid #ccc
+  padding-left: 1rem
+  width: 15%
+  background: #999
+
+.docs-sub-titles
+  padding-bottom: 0.3rem
+  text-align: center
+  color: #333
+  &:hover
+    color: #1276CE
+    text-decoration-line: underline
+
 
