Add system design docs

--- a/stories/css/systemdesigndocs.sass
+++ b/stories/css/systemdesigndocs.sass
@@ -5,11 +5,10 @@
     flex-wrap: wrap
 
   img
-    margin: 0 1.5rem 0 1.5rem
+    margin: 1.5rem
 
   .img2
     margin: 0 1.5rem 0 1.5rem
-    text-align: center
 
 .docs-titles
   margin-top: 1.5rem
