--- a/stories/css/resume.sass
+++ b/stories/css/resume.sass
@@ -1,7 +1,7 @@
 .layout
   display: flex
   margin-top: 1rem
-  > *:first-child
+  > div
     flex: 0 0 50%
 
 .cv-title
@@ -10,7 +10,7 @@
   border-radius: 5px
   border: 1px solid #ccc
   padding-left: 1rem
-  width: 20%
+  width: 15%
   background: #999
   margin: 0.2rem 0 0.2rem 0
 
@@ -20,14 +20,14 @@
   border-radius: 5px
   border: 1px solid #ccc
   padding-left: 1rem
-  width: 30%
+  width: 15%
   background: #999
   margin: 0.2rem 0 0.2rem 0
 
 .info
   display: flex
   > *:first-child
-    padding: 0.3rem
+    padding: 0.3rem 0 0 1rem
     font-weight: bold
   > *:nth-child(2)
     padding: 0.3rem
@@ -47,5 +47,15 @@
 .work-item
   padding: 0 2rem
 
-.work-description
-  margin-left: 2rem
+.period
+  font-size: 14px
+
+.job, .education
+  display: flex
+
+.job-title, .major
+  flex: 13rem 0
+  font-weight: bold
+
+.company-name, .school
+  margin-left: 20 rem
